--- a/HeadController/assets/menu.html
+++ b/HeadController/assets/menu.html
@@ -16,7 +16,7 @@
 				});*/
 				
 				headController.detectFaces("" + function(scanInfo) {
-					document.getElementById("message_area").innerHTML = "<center>Faces detected!!!!</center>";
+					document.getElementById("message_area").innerHTML = "<center>Faces detected. Scan info: " + JSON.stringify(scanInfo) + "</center>";
 				});
 				
 			});
