--- a/HeadController/assets/menu.html
+++ b/HeadController/assets/menu.html
@@ -7,7 +7,7 @@
 		function useHeadController() {
 			document.getElementById("readiness").innerHTML = "<center>Readiness: " + headController.isReady() + "</center>";
 			
-			headController.communicate("Hello from a Super Head!", "" + function() {
+			headController.communicate("Hello Oleg, I am glad to see you!", "" + function() {
 				document.getElementById("message_area").innerHTML = "<center>Speaking finished</center>";
 				
 				/*headController.listen("" + function(heardMText) {
